--- a/index.html
+++ b/index.html
@@ -1,1 +1,19 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>P. Salmanul Faris - Portfolio</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <div id="webgl"></div>
+  <div class="ui-overlay" id="ui-overlay">
+    <h1>P. Salmanul Faris</h1>
+    <p>Cybersecurity Professional | Full-Stack Developer | Physicist</p>
+    <button onclick="startJourney()">Enter My World</button>
+  </div>
+  <script type="module" src="js/main.js"></script>
+</body>
+</html>
