--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
   <title>P. Salmanul Faris - Portfolio</title>
   <link rel="stylesheet" href="/salman-portfolio/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 </head>
 <body>
-  <div id="webgl"></div>
+  <div id="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000;"></div>
+  <div id="webgl" style="display: none;"></div>
   <div class="ui-overlay" id="ui-overlay">
     <h1>P. Salmanul Faris</h1>
     <p>Cybersecurity Professional | Full-Stack Developer | Physicist</p>
