--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>P. Salmanul Faris - Portfolio</title>
   <link rel="stylesheet" href="/salman-portfolio/css/style.css">
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 </head>
 <body>
   <div id="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000;"></div>
+  <div id="loading-screen" style="display: none;">
+    <div class="terminal">
+      <div class="terminal-header">> Cyber Matrix Initializing...</div>
+      <div id="terminal-messages"></div>
+    </div>
+  </div>
   <div id="webgl" style="display: none;"></div>
   <div class="ui-overlay" id="ui-overlay">
     <h1>P. Salmanul Faris</h1>
