--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
   <title>P. Salmanul Faris - Portfolio</title>
   <link rel="stylesheet" href="/salman-portfolio/css/style.css">
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=VT323&display=swap" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/ScrollTrigger.min.js"></script> <!-- Added UMD version -->
 </head>
 <body>
   <div id="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #000;"></div>
@@ -30,6 +28,8 @@
       alert('JavaScript is running, but main.js may not be loaded. Check browser console (F12) for errors.');
     };
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/ScrollTrigger.min.js"></script>
   <script type="module" src="/salman-portfolio/js/main.js"></script>
 </body>
 </html>
