--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     };
   </script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/ScrollTrigger.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script> <!-- Updated path -->
   <script type="module" src="/salman-portfolio/js/main.js"></script>
 </body>
 </html>
