--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
   </script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
-  <script src="/salman-portfolio/js/main.js"></script> <!-- Changed to non-module -->
+  <script type="module" src="/salman-portfolio/js/main.js"></script> <!-- Restored type="module" -->
 </body>
 </html>
