--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Optional favicon -->
 </head>
 <body>
-  <div id="landing-effect" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100;">
-    <!-- Placeholder for Unicorn Studio WebGL effect -->
+  <div id="landing-effect" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100; cursor: pointer;">
+    <!-- Placeholder for Unicorn Studio liquid glass effect -->
     <script>
-      // Simulated Unicorn Studio effect (replace with actual export from unicorn.studio)
+      // Simulated liquid glass effect (replace with actual export from unicorn.studio)
       const canvas = document.createElement('canvas');
       canvas.style.position = 'absolute';
       canvas.style.top = '0';
@@ -21,11 +21,27 @@
       canvas.height = window.innerHeight;
       document.getElementById('landing-effect').appendChild(canvas);
 
-      // Mock glowing text and particles
       const ctx = canvas.getContext('2d');
+      let mouseX = canvas.width / 2;
+      let mouseY = canvas.height / 2;
+
       function animate() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        // Glowing text simulation
+        // Liquid glass simulation with ripple effect
+        const time = Date.now() * 0.001;
+        for (let x = 0; x < canvas.width; x += 10) {
+          for (let y = 0; y < canvas.height; y += 10) {
+            const dx = x - mouseX;
+            const dy = y - mouseY;
+            const dist = Math.sqrt(dx * dx + dy * dy);
+            const ripple = Math.sin(dist * 0.1 - time) * 20;
+            ctx.beginPath();
+            ctx.fillStyle = `rgba(0, 255, 204, ${Math.max(0.2, 0.5 - dist / 500)})`;
+            ctx.arc(x + ripple, y + ripple, 5, 0, Math.PI * 2);
+            ctx.fill();
+          }
+        }
+        // Glowing text overlay
         ctx.font = '3em Orbitron';
         ctx.fillStyle = 'rgba(0, 255, 204, 0.8)';
         ctx.shadowBlur = 20;
@@ -33,20 +49,23 @@
         ctx.fillText('P. Salmanul Faris', canvas.width / 2 - 150, canvas.height / 2 - 50);
         ctx.font = '1.5em Orbitron';
         ctx.fillText('Cybersecurity Professional | Full-Stack Developer | Physicist', canvas.width / 2 - 250, canvas.height / 2 + 20);
-        // Particle simulation
-        for (let i = 0; i < 100; i++) {
-          const x = Math.random() * canvas.width;
-          const y = Math.random() * canvas.height;
-          ctx.beginPath();
-          ctx.arc(x, y - (Date.now() % 2000) / 10, 1, 0, Math.PI * 2);
-          ctx.fillStyle = 'rgba(0, 255, 204, 0.5)';
-          ctx.fill();
-        }
         requestAnimationFrame(animate);
       }
       animate();
 
-      // Hide effect on button click
+      // Mouse interaction
+      canvas.addEventListener('mousemove', (e) => {
+        mouseX = e.clientX;
+        mouseY = e.clientY;
+      });
+      canvas.addEventListener('click', () => {
+        document.getElementById('landing-effect').style.opacity = '0';
+        setTimeout(() => {
+          document.getElementById('landing-effect').style.display = 'none';
+          if (window.startJourneyOriginal) window.startJourneyOriginal();
+        }, 500);
+      });
+
       window.startJourney = () => {
         document.getElementById('landing-effect').style.opacity = '0';
         setTimeout(() => {
@@ -65,10 +84,8 @@
     </div>
   </div>
   <div id="webgl" style="display: none;"></div>
-  <div class="ui-overlay" id="ui-overlay" style="opacity: 0;">
-    <h1>P. Salmanul Faris</h1>
-    <p>Cybersecurity Professional | Full-Stack Developer | Physicist</p>
-    <button onclick="startJourney()">Enter My World</button>
+  <div class="ui-overlay" id="ui-overlay" style="display: none;">
+    <!-- Button removed, handled by liquid glass effect -->
   </div>
   <div id="card-container"></div>
   <script>
