--- a/index.html
+++ b/index.html
@@ -9,46 +9,71 @@
   <link rel="icon" href="/favicon.ico" type="image/x-icon"> <!-- Optional favicon -->
 </head>
 <body>
-  <div id="landing-effect" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100; cursor: pointer;">
+  <div id="landing-effect" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: 100;">
     <!-- Unicorn Studio effect from your code -->
     <div data-us-project="DZC1eJBOt9S7XzxZKogB" style="width: 100%; height: 100%;"></div>
-    <!-- Glowing text overlay -->
-    <canvas id="text-overlay" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none;"></canvas>
+    <!-- Text and button overlay -->
+    <div id="overlay-content" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; z-index: 101; pointer-events: none;">
+      <canvas id="text-overlay" style="position: relative; pointer-events: none;"></canvas>
+      <button id="enter-button" style="pointer-events: auto;">Enter My World</button>
+    </div>
     <script type="text/javascript">
       // Load Unicorn Studio library
       !function(){if(!window.UnicornStudio){window.UnicornStudio={isInitialized:!1};var i=document.createElement("script");i.src="https://cdn.jsdelivr.net/gh/hiunicornstudio/unicornstudio.js@v1.4.29/dist/unicornStudio.umd.js",i.onload=function(){window.UnicornStudio.isInitialized||(UnicornStudio.init(),window.UnicornStudio.isInitialized=!0)},(document.head || document.body).appendChild(i)}}();
 
-      // Add glowing text overlay
+      // Dynamic text overlay
       const canvas = document.getElementById('text-overlay');
       const ctx = canvas.getContext('2d');
+      function resizeCanvas() {
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+        drawText();
+      }
+      window.addEventListener('resize', resizeCanvas);
+      resizeCanvas();
+
       function drawText() {
         ctx.clearRect(0, 0, canvas.width, canvas.height);
-        ctx.font = '3em Orbitron';
-        ctx.fillStyle = 'rgba(0, 255, 204, 0.8)';
-        ctx.shadowBlur = 20;
-        ctx.shadowColor = '#00ffcc';
-        ctx.fillText('P. Salmanul Faris', canvas.width / 2 - 150, canvas.height / 2 - 50);
-        ctx.font = '1.5em Orbitron';
-        ctx.fillText('Cybersecurity Professional | Full-Stack Developer | Physicist', canvas.width / 2 - 250, canvas.height / 2 + 20);
+        ctx.font = 'bold 2em Orbitron'; // Bold, adjusted size
+        ctx.fillStyle = '#ffffff'; // White text
+        ctx.textAlign = 'center';
+        ctx.shadowBlur = 15;
+        ctx.shadowColor = '#ffffff';
+        ctx.fillText('P. Salmanul Faris', canvas.width / 2, canvas.height / 2 - 40);
+        ctx.font = 'bold 1.2em Orbitron'; // Bold, adjusted size
+        ctx.fillText('Cybersecurity | Developer | Physicist', canvas.width / 2, canvas.height / 2 + 20);
         requestAnimationFrame(drawText);
       }
       drawText();
 
-      // Wait for Unicorn Studio to initialize, then add click handler
-      function setupClickHandler() {
-        if (window.UnicornStudio && window.UnicornStudio.isInitialized) {
-          document.getElementById('landing-effect').addEventListener('click', () => {
-            document.getElementById('landing-effect').style.opacity = '0';
-            setTimeout(() => {
-              document.getElementById('landing-effect').style.display = 'none';
-              if (window.startJourneyOriginal) window.startJourneyOriginal();
-            }, 500);
-          });
-        } else {
-          setTimeout(setupClickHandler, 100); // Poll until initialized
-        }
+      // Animated button
+      const button = document.getElementById('enter-button');
+      button.style.opacity = '0';
+      button.style.transition = 'opacity 1s, transform 0.3s';
+      setTimeout(() => {
+        button.style.opacity = '1';
+      }, 500);
+      button.addEventListener('mouseover', () => {
+        button.style.transform = 'scale(1.1)';
+      });
+      button.addEventListener('mouseout', () => {
+        button.style.transform = 'scale(1)';
+      });
+      button.addEventListener('click', () => {
+        document.getElementById('landing-effect').style.opacity = '0';
+        setTimeout(() => {
+          document.getElementById('landing-effect').style.display = 'none';
+          if (window.startJourneyOriginal) window.startJourneyOriginal();
+        }, 500);
+      });
+
+      // Remove Unicorn Studio branding
+      function hideBranding() {
+        const branding = document.querySelector('[data-us-branding]') || document.querySelector('.us-branding');
+        if (branding) branding.style.display = 'none';
+        else setTimeout(hideBranding, 100); // Poll until branding loads
       }
-      setupClickHandler();
+      hideBranding();
 
       window.startJourney = () => {
         document.getElementById('landing-effect').style.opacity = '0';
